# chatgpt-nonebot-qq

./: .env.prod  LICENSE  README.md  bot.py  pyproject.toml
src/plugins/: gpt.py
src/plugins/chatgpt/: bot.py  constants.py  conversation.py
src/plugins/chatgpt/middlewares/: baiducloud.py
