[project]
name = "gpt"
version = "0.1.0"
description = "gpt"
readme = "README.md"
requires-python = ">=3.8, <4.0"

[tool.nonebot]
adapters = [
    {name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11", project_link = "nonebot-adapter-onebot", desc = "OneBot V11 协议"}
]
plugins = []
plugin_dirs = []
builtin_plugins = ["echo", "single_session"]
